// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bad_exports.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
export function foo(x: number) { return x; } // Error, missing return type

=====================================output=====================================
export function foo(x: number) {
  return x;
} // Error, missing return type

================================================================================
`;

exports[`bar.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
(require('./foo'): number);

=====================================output=====================================
// @flow
(require("./foo"): number);

================================================================================
`;

exports[`foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
require('./bar');
module.exports = 0;

=====================================output=====================================
// @flow
require("./bar");
module.exports = 0;

================================================================================
`;

exports[`not_flow.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
1 * 'foo';

=====================================output=====================================
1 * "foo";

================================================================================
`;

exports[`unsaved_foo.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow
require('./bar');
module.exports = "hello";

=====================================output=====================================
// @flow
require("./bar");
module.exports = "hello";

================================================================================
`;
